# ai-articles

./: index.html  pyproject.toml  run.sh  settings.html
.github/workflows/: run.yml
arvix/: paper2md.py  paper_filter.py  paper_translate.py
assets/: file-list.txt
data/: 2025-06-16.jsonl  2025-06-16.md  2025-06-16_zh.jsonl  2025-06-17.jsonl  2025-06-17.md  2025-06-17_zh.jsonl  2025-06-19.jsonl  2025-06-19.md  2025-06-19_zh.jsonl  2025-06-21.jsonl  2025-06-21.md  2025-06-21_zh.jsonl  example.jsonl
js/: app.js
