[project]
name = "daily-ai-article"
version = "0.1.0"
description = "Daily crawl article about AI and use LLMs to summarize them"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "aiohttp>=3.12.13",
    "tqdm>=4.67.1",
    "argparse>=1.4.0"
]
license = "Apache-2.0"
